Installer Semi-Final Commit. AFAICT it is now working 100%. More testing needs to be done however, preferably when I've not come off a 13 hour coding session.

--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@
 #       .pycs are cached precompiled python files, and unneeded for distribution.
 #       rom folder contains copyrighted content.
 #       music folder will likely be empty, since it just contains pcms.
+testpath/
 rom/
 music/
 **/*.pyc
@@ -19,3 +20,4 @@ music/
 **/*.rom
 **/*.bin
 **/*.pyc
+installer/dist/
