Add basic mirror checking and fallback.

--- a/installer/CMakeLists.txt
+++ b/installer/CMakeLists.txt
@@ -54,6 +54,7 @@ else()
             downloadmanager.h downloadmanager.cpp
             customtrackselection.h customtrackselection.cpp customtrackselection.ui
             ips-patcher-master/IPSPatcherHandler.h ips-patcher-master/IPSPatcherHandler.cpp
+            mirrorchecker.h mirrorchecker.cpp
         )
     endif()
 
