Move to QSoundEffect on Qt6, enabling Kefka Laughter playback on Qt6-only targets like macOS.

--- a/installer/CMakeLists.txt
+++ b/installer/CMakeLists.txt
@@ -9,6 +9,8 @@ set(CMAKE_AUTORCC ON)
 set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
+set(QT_DEFAULT_MAJOR_VERSION 6)
+
 find_package(QT NAMES Qt6 Qt5 REQUIRED COMPONENTS Widgets LinguistTools Xml Network Multimedia)
 find_package(Qt${QT_VERSION_MAJOR} REQUIRED COMPONENTS Widgets LinguistTools Xml Network Multimedia)
 
